fix overflowing footer other

--- a/src/assets/styles/components/atoms/_button.scss
+++ b/src/assets/styles/components/atoms/_button.scss
@@ -9,7 +9,6 @@
   max-width: 22rem;
   display: flex;
   align-items: center;
-  padding-right: 2rem;
   color: white;
   margin: 0 auto;
 
@@ -21,12 +20,18 @@
 }
 
 .btn-github {
+  padding-right: 2rem;
   border: variables.$border-button-github;
   height: 4rem;
   gap: 2rem;
   font-weight: 900;
   transition: transform 0.3s ease-out;
   filter: opacity(0.999);
+
+  & svg {
+    position: absolute;
+
+  }
 
   &:hover {
     animation: button-scale 0.5s ease-in-out 0.1s forwards;
@@ -70,9 +75,5 @@
 @media (width <=25rem) {
   .btn {
     font-size: 0.5rem;
-  }
-
-  .btn-chevron-up {
-    display: none;
   }
 }
