--- a/src/assets/styles/components/atoms/_svg.scss
+++ b/src/assets/styles/components/atoms/_svg.scss
@@ -6,9 +6,7 @@
   padding: 0;
 }
 
-.github {
-  position: absolute;
-}
+.github {}
 
 .chevron-up {
   width: 4rem;
